# MadCamp25-Week4_QuantFairy

./: .env.example  .gitignore  PatchNotes.md  README.md  decisions.md  features.md  package-lock.json  pyproject.toml
.github/workflows/: trade.yml
Notes/v2/: features_v2.md  scope_v2.md
backend/: .env  .env.example  readme.md  requirements.txt
backend/app/: db.py  main.py
backend/scripts/: benchmarks_etf.txt  ingest_yahoo.py  init_db.py  seed_db.py  symbols_100.txt  sync_alpaca.py  update_public_strategy_descriptions.py
backend/sql/: schema.sql
backend/tests/: test_strategies_smoke.py
cli/: README.md  bots.py  container.py  main.py  state.py
cli/commands/: account.py  backtest.py  run.py  status.py  stop.py  strategy.py  trade.py
config/: bots.yaml
docs/: Decisions.md  PatchNotes.md
docs/v1/: features.md
engine/: README.md  errors.py
engine/backtest/: ensemble.py  metrics.py  runner.py
engine/data/: protocol.py  sp500.json  timeseries.py  universe.py
engine/strategies/: base.py  indicators.py  registry.py  sandbox.py  spec.py  validation.py
engine/trading/: account.py  broker.py  executor.py  market_hours.py  metrics.py  order.py  position.py  scheduler.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
infra/broker/: alpaca.py
infra/data/: db.py  yfinance.py
test/: README.md  conftest.py
test/cli/: test_bots.py  test_state.py
test/engine/: test_executor.py  test_market_hours.py  test_metrics.py  test_registry.py  test_runner.py  (+2 more)
(+178 files in other folders)
